# tiktalknet

./: .gitignore  README.md  allfiles.json  cog.yaml  controllable_talknet.py  diffsvc_gui.py  mycroft_talknet.py  predict.py  requirements-windows.txt  requirements.txt  research.md  run.sh  speed_test.py  start.py  start_training.sh  talknet_offline.py  talknet_predict.py  talknet_prediction.py  voice_trainer.ipynb  voice_trainer.py
core/: vocoder.py
example/: allfiles.txt  metadata.csv  train_filelist.txt  valfiles.txt
hifi-gan/: config_v1b.json  models.py  train.py
hifi-ganx/: config_32k.json  denoiser.py  inference_e2e.py  meldataset.py  training.txt  validation.txt
model_lists/: all_models.json  example_models.json  sortanon_models.json  voice_models_upstreet.json
pipeline/: pipeline.py  pyproject.toml
pipeline/input/JuiceWRLD/: protocol.csv  sources.json
pipeline/src/audio_scraping/: main.py
pipeline/src/domain_and_topic_detection/: main.py
pipeline/src/source_separation/: main.py
pipeline/src/speaker_clustering_and_id/: main.py
pipeline/src/speaker_diarization/: main.py
pipeline/src/speech_recognition_and_transcription/: main.py
pipeline/src/speech_segmentation/: main.py
pipeline/src/synthetic_detection/: data.py  main.py  models.py
youtube/: README.md  links.txt  requirements.txt  text_cleaner.py  youtube.py  youtube_tts_data_generator.py
